--- a/SpaceGame/PDFView.resx
+++ b/SpaceGame/PDFView.resx
@@ -125,4 +125,15 @@
         AAAAAQAAAAAAAAAAAAAAAAwAAAAACQAA2BMAANgTAAAL
 </value>
   </data>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAEBAQAAEABAAoAQAAFgAAACgAAAAQAAAAIAAAAAEABAAAAAAAgAAAAAAAAAAAAAAAEAAAAAAA
+        AAAAqv8AAAAAAADQ/wAAAP8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAERESIzIhERERERIDMCEREREREQMwEREREREREzERERERERERERERERERERERERERERERERER
+        ERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERER
+        ERERERERERERERERERH4HwAA+B8AAOQnAADoFwAA6lcAAOvXAADzzwAA+98AAPvfAAD73wAA+98AAPvf
+        AAD73wAA+98AAP2/AAD+fwAA
+</value>
+  </data>
 </root>
