--- a/SpaceGame/Properties/Resources.resx
+++ b/SpaceGame/Properties/Resources.resx
@@ -247,9 +247,6 @@
   <data name="rocket5" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\rocket5.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="pdfs" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\pdfs.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="downroom2" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\downroom2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -20984,5 +20981,14 @@
   </data>
   <data name="icons8-esc-48" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\icons8-esc-48.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="dooropen" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\dooropen.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="footsteps" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\footsteps.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="pdfs" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\pdfs.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
